css/style.css
@font-face {
    font-family: Outfit-Bold;
    src: url("/fonts/Outfit-Bold.ttf");
}

@font-face {
    font-family: Outfit-SemiBold;
    src: url("/fonts/Outfit-SemiBold.ttf");

}

@font-face {
    font-family: Outfit-Light;
    src: url("/fonts/Outfit-Light.ttf");
}

@font-face {
    font-family: Outfit-ExtraLight;
    src: url("/fonts/Outfit-ExtraLight.ttf");
}

body {
    box-sizing: border-box;
    background-color: hsl(217, 54%, 11%);
}


figure {
    margin: 25px;
}

hr {
    background-color: #2d3f57;
    border: none;
    height: 2px;
    margin: 15px 0 15px 0;
}

.attribution {
    font-size: 15px;
    font-family: Outfit-ExtraLight;
    text-align: center;
    color: #6d84a3;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

.container {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.card {
    width: 25%;
    background-color: hsl(216, 50%, 16%);
    border-radius: 10px;
    margin-bottom: 5px;
    box-shadow: 0 15px 20px 30px #0c1729;
}

.card-image-container {
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #0096a7;
}

.card-img {
    width: 100%;
    border-radius: 10px;
}

.view-card-image {
    border-radius: 10px;
    position: absolute;
    width: 50px;
    z-index: -1;
}

.card-image-container:hover > img {
    opacity: 0.5;
    z-index: 1;
    cursor: pointer;
}

.card-creator {
    display: flex;
    align-items: center;
}

.thumbnail-img {
    height: 85%;
    width: 15%;
    border: 1px white solid;
    border-radius: 100%;
    margin-right: 10px;
}

.creation-of {
    color: #546b8b;
    font-size: 25px;
    font-family: Outfit-ExtraLight;
}

.creator-name {
    color: white;
    font-size: 25px;
    font-family: Outfit-ExtraLight;
}

.creator-name:hover {
    cursor: pointer;
    color: #13d7d7;
}

.ethereum-thumbnail,
.clock-thumbnail {
    margin-right: 10px;
}

.card-price-info {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-between;
}

.time {
    color: #728aaa;
    font-size: 25px;
    font-family: Outfit-SemiBold;
    display: flex;
    justify-content: center;
    align-items: center;
}

.price {
    color: #2ae5e8;
    font-family: Outfit-SemiBold;
    display: flex;
    font-size: 25px;
    justify-content: center;
    align-items: center;
}

.card-title {
    color: hsl(0, 0%, 100%);
    font-family: Outfit-Bold;
    font-size: 30px;
    margin: 15px 0 15px 0;
}

.card-title:hover {
    color: #13d7d7;
    cursor: pointer;
}

.card-info {
    color: #6a80a0;
    margin-bottom: 15px;
    font-family: Outfit-ExtraLight;
    font-size: 25px;
}

@media (min-width: 1025px ) and (max-width: 1440px) {
    .card-title {
        font-size: 25px;
        margin: 15px 0 15px 0;
    }

    .card-info {
        margin-bottom: 12px;
        font-size: 20px;
    }

    .view-card-image {
        width: 10px;
    }

    .time,
    .price,
    .creator-name,
    .attribution,
    .creation-of {
        font-size: 20px;
    }

    .ethereum-thumbnail,
    .clock-thumbnail {
        margin-right: 5px;
        height: 20px;
    }

    hr {
        margin: 15px 0 15px 0;
    }

    figure {
        margin: 15px;
    }

    .card {
        border-radius: 3px;
        box-shadow: 0 10px 10px 10px #0c1729;
    }

    .card-image-container,
    .card-img,
    .view-card-image {
        border-radius: 3px;
    }

    .thumbnail-img {
        margin-right: 10px;
    }
}

@media (min-width: 768px) and (max-width: 1024px) {
    .card-title {
        font-size: 15px;
        margin: 12px 0 12px 0;
    }

    .card-info {
        margin-bottom: 12px;
        font-size: 11px;
    }

    .view-card-image {
        width: 10px;
    }

    .time,
    .price,
    .creator-name,
    .attribution,
    .creation-of {
        font-size: 11px;
    }

    .ethereum-thumbnail,
    .clock-thumbnail {
        margin-right: 5px;
        height: 12px;
    }

    hr {
        margin: 12px 0 12px 0;
    }

    figure {
        margin: 12px;
    }

    .card {
        border-radius: 3px;
        box-shadow: 0 10px 10px 10px #0c1729;
    }

    .card-image-container,
    .card-img,
    .view-card-image {
        border-radius: 3px;
    }

    .thumbnail-img {
        margin-right: 5px;
    }
}

@media (min-width: 481px) and (max-width: 767px) {
    .card-title {
        font-size: 10px;
        margin: 8px 0 8px 0;
    }

    .card-info {
        margin-bottom: 5px;
        font-size: 7px;
    }

    .view-card-image {
        width: 10px;
    }

    .time,
    .price,
    .creator-name,
    .attribution,
    .creation-of {
        font-size: 7px;
    }

    .ethereum-thumbnail,
    .clock-thumbnail {
        margin-right: 5px;
        height: 8px;
    }

    hr {
        margin: 8px 0 8px 0;
    }

    figure {
        margin: 8px;
    }

    .card {
        border-radius: 3px;
        box-shadow: 0 10px 10px 10px #0c1729;
    }

    .card-image-container,
    .card-img,
    .view-card-image {
        border-radius: 3px;
    }

    .thumbnail-img {
        margin-right: 5px;
    }
}

@media (min-width: 320px) and (max-width: 480px) {
    .card-title {
        font-size: 7px;
        margin: 5px 0 5px 0;
    }

    .card-info {
        margin-bottom: 5px;
        font-size: 5px;
    }

    .view-card-image {
        width: 10px;
    }

    .time,
    .price,
    .creator-name,
    .attribution,
    .creation-of {
        font-size: 5px;
    }

    .ethereum-thumbnail,
    .clock-thumbnail {
        margin-right: 3px;
        height: 5px;
    }

    hr {
        margin: 5px 0 5px 0;
    }

    figure {
        margin: 5px;
    }

    .card {
        border-radius: 3px;
        box-shadow: 0 10px 10px 10px #0c1729;
    }

    .card-image-container,
    .card-img,
    .view-card-image {
        border-radius: 3px;
    }

    .thumbnail-img {
        margin-right: 3px;
    }
}

